test/testBool/badMul1.out
badMul1.rask:3:18: error: function binary*(boolean, boolean) not found