test/testBool/badMul1.rask
main() -> void
{
    var x = true * false;
}
